--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "laravel/breeze": "^2.3",
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
+        "spatie/laravel-medialibrary": "^11.13",
         "spatie/laravel-sluggable": "^3.7"
     },
     "require-dev": {
